--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/craft.css?v=5">
     <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <title>Dual Universe Beta Crafting Calculator</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P52PMV90FX"></script>
+    <title>Dual Universe Crafting Calculator</title>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-P52PMV90FX"></script> -->
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -14,17 +14,17 @@
             dataLayer.push(arguments);
         }
 
-        gtag('js', new Date());
-        gtag('config', 'G-P52PMV90FX');
+        // gtag('js', new Date());
+        // gtag('config', 'G-P52PMV90FX');
     </script>
 </head>
 <html lang="en-US">
 <body>
 
 <nav class="navbar">
-    <button class="bugButton" style="float:left;margin:0 5px;"><a
+<!--     <button class="bugButton" style="float:left;margin:0 5px;"><a
             href="https://github.com/AstronIsTaken/du-craft/issues" target="_blank"> >>> Report Issues!! <<< </a>
-    </button>
+    </button> -->
     <button id="skillsButton" style="float:left;margin:0 5px;">Skills</button>
     <button id="priceButton" style="float:left;margin:0 5px;">Prices</button>
     <button id="profileButton" style="float:left;margin:0 5px;">Save/Load Profiles</button>
@@ -33,9 +33,9 @@
     <button id="getDataButton" style="float:left;margin:0 5px;">Copy Config</button>
     <button id="setDataButton" style="float:left;margin:0 5px;">Paste Config</button>
 
-    <span style="color:#fff;float:left;padding:0 0 0 15px;">Updated on&nbsp;<a id="lastUpdateTime"
+<!--     <span style="color:#fff;float:left;padding:0 0 0 15px;">Updated on&nbsp;<a id="lastUpdateTime"
                                                                                href="https://github.com/AstronIsTaken/du-craft/releases"
-                                                                               target="_blank">Loading</a></span>
+                                                                               target="_blank">Loading</a></span> -->
     <span class="navright legend">
 <span class="tier-1 tier-all">1 : Basic</span>
 <span class="tier-2 tier-all">2 : Uncommon</span>
